TEST_PROGRAMS/VALID_TYPECHECK/ordered_lt.go
package main;

func main() {
    
    //this assignment is allowed
    var c bool = 1<0;
    print(c);
}
