TEST_PROGRAMS/INVALID/09/missing_typecast.go
package misstype

func main() {
    bool()
}
